--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+   @font-face {
+      font-family: 'Sree';
+      font-style: normal;
+      font-weight: 400;
+      src: url("fonts/sree.ttf");
+   }
+   @font-face {
+      font-family: 'Figtree';
+      font-style: normal;
+      font-weight: 400;
+      src: url("fonts/figtree.ttf");
+   }
+   @font-face {
+      font-family: 'Amiri-Regular';
+      font-style: normal;
+      font-weight: 400;
+      src: url("fonts/Amiri-Regular.ttf");
+   }
+   @font-face {
+      font-family: 'Amiri-Bold';
+      font-style: normal;
+      font-weight: 600;
+      src: url("fonts/Amiri-Bold.ttf");
+   }
 }
